--- a/photo-store-service/docker-compose.yml
+++ b/photo-store-service/docker-compose.yml
@@ -1,16 +1,16 @@
 version: '3.8'
 
 services:
-  photo-app:
-    container_name: photo-app1
-    image: photo-app1
+  photo-server:
+    container_name: photo-server1
+    image: photo-server1
     build:
       context: .
     volumes:
       - .:/app
       - /app/node_modules
     ports:
-      - 3001:3001
+      - 3002:3002
     command: npm run start:dev
     networks:
       - webnet
