--- a/photo-store-web/package.json
+++ b/photo-store-web/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/combobox": "^0.13.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
@@ -12,7 +13,9 @@
     "@types/react-dom": "^16.9.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropdown": "^1.9.2",
     "react-scripts": "4.0.1",
+    "react-widgets": "^5.0.0-beta.22",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
