--- a/photo-store-application/package.json
+++ b/photo-store-application/package.json
@@ -27,6 +27,7 @@
     "@nestjs/microservices": "^7.6.7",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
+    "firebase-admin": "^9.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
