--- a/photo-store-server/package.json
+++ b/photo-store-server/package.json
@@ -27,6 +27,8 @@
     "@nestjs/microservices": "^7.6.7",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/platform-socket.io": "^7.6.7",
+    "@nestjs/websockets": "^7.6.7",
     "firebase-admin": "^9.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
@@ -45,6 +47,7 @@
     "@types/node": "^14.14.6",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
+    "@types/socket.io": "2.1.0",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
