--- a/photo-store-web/package.json
+++ b/photo-store-web/package.json
@@ -11,11 +11,14 @@
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/socket.io": "2.1.0",
+    "@types/socket.io-client": "^1.4.35",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropdown": "^1.9.2",
     "react-scripts": "4.0.1",
     "react-widgets": "^5.0.0-beta.22",
+    "socket.io-client": "2.1.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -42,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/socket.io-client": "^1.4.35"
   }
 }
